# simpletcn

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  analysis_dashboard.py  benchmarking.py  conv1d.cpp  conv1d.hpp  conv1d_test  dropout.hpp  dropout_test  ecg_train.txt  final_test_results.csv  layer.hpp  main.cpp  preprocess_ptbxl.py  rb_test  relu.cpp  relu.hpp  relu_test  relu_test.cpp  residual_block.cpp  residual_block.hpp  residual_block_test.cpp  run_all_tests.sh  tcn.cpp  tcn.hpp  tensor.cpp  tensor.hpp  utils.cpp
analysis/: fetch_data.py
data/: ecg_test.txt  ecg_val.txt
include/: conv1d.hpp  cuda_utils.hpp  dropout.hpp  layer.hpp  relu.hpp  residual_block.hpp  tcn.hpp  tensor.hpp  utils.hpp
src/: conv1d.cpp  cuda_ops.cu  dropout.cpp  main.cpp  relu.cpp  residual_block.cpp  tcn.cpp  tensor.cpp  utils.cpp
tests/: conv1d_test.cpp  cuda_test.cpp  dropout_test.cpp  relu_test.cpp  residual_block_test.cpp  tcn_test.cpp
